# PizzaTracker

./: .gitignore  orderReq.json  orderUpdater.py  pyproject.toml  requirements.txt
dashboard/: index.html  script.js  style.css
db/: __init__.py  db.py
db/models/: order.py  orderItem.py
orderSimulator/: main.py
orderUpdater/: main.py
pizzaTracker/: main.py  schema.py
