[tool.poetry]
name = "pizzatracker"
version = "0.1.0"
description = ""
authors = ["Paul Sherer <wolfy@wolfymaster.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
console-menu = "^0.8.0"
sqlalchemy = "^2.0.7"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
